force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/cgcloud__Org_Unit_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>Holds the detail of the relationship between two org units. Usually used for the sales org unit hierarchy.</description>
    <label>Org Unit Hierarchy</label>
    <nameField>
        <displayFormat>OUH-{0000}</displayFormat>
        <label>Org Unit Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Unit Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>