force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/fields/cgcloud__Child_Org_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Child_Org_Level__c</fullName>
    <description>Child Org Level.</description>
    <formula>TEXT(cgcloud__Child_Org_Unit__r.cgcloud__Org_Level__c)</formula>
    <label>Child Org Level</label>
    <type>Text</type>
</CustomField>