force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/fields/cgcloud__Child_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Child_Org_Type__c</fullName>
    <description>Child Org Type.</description>
    <formula>TEXT(cgcloud__Child_Org_Unit__r.cgcloud__Org_Type__c)</formula>
    <label>Child Org Type</label>
    <type>Text</type>
</CustomField>