force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/fields/cgcloud__Child_Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Child_Org_Unit__c</fullName>
    <description>Reference to a child org unit in an org unit hierarchy.</description>
    <label>Child Org Unit</label>
    <referenceTo>cgcloud__Org_Unit__c</referenceTo>
    <relationshipLabel>Parent Org Unit Hierarchies</relationshipLabel>
    <relationshipName>Org_Unit_Hierarchies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>