force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/fields/cgcloud__Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description__c</fullName>
    <description>Description based on the user specific language.</description>
    <formula>cgcloud__Parent_Org_Unit__r.cgcloud__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>