force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/fields/cgcloud__Parent_Org_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Org_Level__c</fullName>
    <description>Parent Org Level.</description>
    <formula>TEXT(cgcloud__Parent_Org_Unit__r.cgcloud__Org_Level__c)</formula>
    <label>Parent Org Level</label>
    <type>Text</type>
</CustomField>