force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/fields/cgcloud__Parent_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Org_Type__c</fullName>
    <description>Parent Org Type.</description>
    <formula>TEXT(cgcloud__Parent_Org_Unit__r.cgcloud__Org_Type__c)</formula>
    <label>Parent Org Type</label>
    <type>Text</type>
</CustomField>