force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/fields/cgcloud__Parent_Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Org_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the parent org unit in an org unit hierachy.</description>
    <label>Parent Org Unit</label>
    <referenceTo>cgcloud__Org_Unit__c</referenceTo>
    <relationshipLabel>Child Org Unit Hierarchies</relationshipLabel>
    <relationshipName>Org_Unit_Hierarchies1</relationshipName>
    <type>Lookup</type>
</CustomField>