force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>true</active>
    <description>The Parent Org Unit and the Child Org Unit must have the same Sales Org.</description>
    <errorConditionFormula>TEXT(cgcloud__Child_Org_Unit__r.cgcloud__Sales_Org__c) &lt;&gt;  TEXT(cgcloud__Parent_Org_Unit__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Parent Org Unit and the Child Org Unit must have the same Sales Org.</errorMessage>
</ValidationRule>