force-app/main/default/objects/cgcloud__Org_Unit_Hierarchy__c/validationRules/cgcloud__Same_Parent_Child_Org_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Same_Parent_Child_Org_Unit</fullName>
    <active>true</active>
    <description>The Child Org Unit and the Parent Org Unit can&apos;t be the same.</description>
    <errorConditionFormula>cgcloud__Child_Org_Unit__c = cgcloud__Parent_Org_Unit__c</errorConditionFormula>
    <errorMessage>The Child Org Unit and the Parent Org Unit can&apos;t be the same.</errorMessage>
</ValidationRule>